# biontech-hackathon

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  cloudbuild.yaml  genJWT.py  pyproject.toml  test_openfda.py
GANDALF/: CONFIG.txt  system-prompt.txt
local-dev/: bootstrap.sh  docker-compose.yml  run-server.sh
src/Medical_Wizard_MCP/: __main__.py  _mcp.py  app.py  requirements.txt  server.py  version.py
src/Medical_Wizard_MCP/models/: __init__.py  oncology.py  trials.py
src/Medical_Wizard_MCP/sources/: _conference_utils.py  _network.py  base.py  bigquery_oncology.py  clinicaltrials.py  crossref.py  europepmc.py  medrxiv.py  openalex.py  openfda.py  pubmed.py  registry.py  semanticscholar.py
src/Medical_Wizard_MCP/tools/: __init__.py  _evidence_extraction.py  _evidence_quality.py  _evidence_refs.py  _inputs.py  _intelligence.py  _responses.py  _tool_catalog.py  audit.py  catalog.py  conferences.py  drugs.py  intelligence.py  monitoring.py  oncology_burden.py  (+4 more)
src/clinical_trials_mcp/: __main__.py  server.py
tests/: conftest.py  run_audit_tests.py  run_clinicaltrials_tests.py  smoke_mcp_tool_outputs.py  test_all_tools_smoke.py  test_audit_tools.py  test_bigquery_oncology.py  test_clinicaltrials_source.py  test_conference_live.py  test_conference_sources.py  test_europepmc.py  test_europepmc_live.py  test_intelligence_tools.py  test_medrxiv.py  test_model_boundaries.py  test_pubmed.py  test_pubmed_live.py  test_registry_resilience.py  test_rosetta_lung_e2e.py  test_signoz_connection.py  test_tool_responses.py
wiki/: base.md
(+11 files in other folders)
