[project]
name = "clinical-trials-mcp"
version = "0.1.0"
description = "Clinical Trial Intelligence MCP Server for BioNTech Hackathon"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx",
    "pydantic>=2.0",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clinical_trials_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"
